Page MenuHome GnuPG

Kleopatra: Export of freshly generated key warns about missing userid certification
Testing, HighPublic

Description

To reproduce:

  1. Generate key (default values)
  2. Export the key

Details

Version
gpg4win-5.0.0-beta395 @ win11

Event Timeline

timegrid created this object with edit policy "Contributor (Project)".

Didn't happen on Linux (on my one and only attempt to reproduce). Will have to check on Windows.

I could reproduce it with the same version (on WIN10).

The export works again without warning only after restarting Kleo, restarting background processes does not help.

Message in Debugview:
9 13.264733 4604 kleopatra.exe org.kde.pim.libkleo: userIDIsCertifiedByUser - Error: Signatures of user ID "Fresh2" not available

ebo added a project: vsd33.

This is also the case in the latest VSD-Beta29

gpgme log for key creation and export with warning for VSD-Beta29

ikloecker moved this task from Backlog to WIP on the gpd5x board.

Fixed.

I couldn't reproduce the problem because I had apparently told Kleopatra in the past "Do not ask again". :/

ikloecker changed the task status from Open to Testing.Oct 30 2025, 8:51 AM
ikloecker moved this task from Backlog to WiP on the vsd33 board.

Backported for VSD 3.4 and VSD 3.3.

ikloecker mentioned this in Unknown Object (Maniphest Task).Nov 3 2025, 9:01 AM

VS-Desktop-3.3.90.31-Beta shows no warning any more for the export of a newly generated key.

ebo edited projects, added vsd33 (vsd-3.3.3); removed vsd33.

Looks good to me on gpg4win-5.0.0-beta413 @ win11

Still needs to be tested on VSD 3.4.