List newly generated key with signatures

This ensures that the signatures are available for other operations.

GnuPG-bug-id: 7876